Add video stream and resize canvas to match size

--- a/src/app/pattern-marker/pattern-marker.component.html
+++ b/src/app/pattern-marker/pattern-marker.component.html
@@ -1,1 +1,2 @@
+<video #video>Video stream not available.</video>
 <canvas #canvas (window:resize)="onResize($event)" click="canvasClick($event)"></canvas> Pattern component
