--- a/src/app/pattern-marker/pattern-marker.component.css
+++ b/src/app/pattern-marker/pattern-marker.component.css
@@ -5,3 +5,12 @@
 .desktop {
  	transform: scale(-1, 1);
 }
+video,
+canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+canvas {
+  z-index: 10;
+}
