Add buttons for switching between AR view types

--- a/src/app/pattern-marker/pattern-marker.component.html
+++ b/src/app/pattern-marker/pattern-marker.component.html
@@ -8,3 +8,10 @@
     <button (click)="shapeClick('box')">Box</button>
     <button (click)="shapeClick('torus')">Torus</button>
 </div>
+
+<div #arTypes id="arTypes">
+        AR Types:
+        <button (click)="arTypeClick('basic')">Basic overlay</button>
+        <button (click)="arTypeClick('trackHiro')">Track hiro image</button>
+        <button (click)="arTypeClick('trackTexture')">Track texture</button>
+</div>
