--- a/src/app/pattern-marker/pattern-marker.component.css
+++ b/src/app/pattern-marker/pattern-marker.component.css
@@ -15,6 +15,10 @@ canvas {
   z-index: 10;
 }
 
-#shapes, #arTypes {
+#hiddenCanvas{
+  display: none;
+}
+
+#shapes, #arTypes, #trackTexture {
   position: absolute;
 }
