--- a/src/app/pattern-marker/pattern-marker.component.html
+++ b/src/app/pattern-marker/pattern-marker.component.html
@@ -3,6 +3,10 @@
 <canvas #canvas (window:resize)="onResize($event)" (click)="canvasClick($event)"></canvas>
 <canvas #hiddenCanvas id='hiddenCanvas'></canvas>
 
+<div #photo id="photo">
+   <img alt="The screen capture will appear in this box.">   
+</div>
+
 <div #shapes id="shapes">
     Shapes:
     <button (click)="shapeClick('sphere')">Sphere</button>
