Add button for Unity overlay

--- a/src/app/pattern-marker/pattern-marker.component.html
+++ b/src/app/pattern-marker/pattern-marker.component.html
@@ -17,6 +17,7 @@
 <div #arTypes id="arTypes">
         AR Types:
         <button (click)="arTypeClick('basic')">Basic overlay</button>
+        <button (click)="arTypeClick('unity')">Unity overlay</button>
         <button (click)="arTypeClick('trackHiro')">Track hiro image</button>
         <button (click)="arTypeClick('trackTexture')">Track texture</button>
 </div>
