Move shapes to component

--- a/src/app/pattern-marker/pattern-marker.component.css
+++ b/src/app/pattern-marker/pattern-marker.component.css
@@ -20,6 +20,6 @@ canvas {
   /* display: none; */
 }
 
-#shapes, #arTypes, #trackTexture, #photo {
+#arTypes, #trackTexture, #photo {
   position: absolute;
 }
