Style data  binding

--- a/src/app/ar-types/ar-types.component.html
+++ b/src/app/ar-types/ar-types.component.html
@@ -6,7 +6,7 @@
   <button (click)="arTypeClick('trackTexture')">Track texture</button>
 </div>
 
-<div #trackTexture id="trackTexture" style="display: none;">
+<div #trackTexture id="trackTexture" [style.display]="arType == 'trackTexture' ? 'inline' : 'none'">
   When tracking texture:
   1. <button (click)="captureImageClick($event)">Take Photo</button> <br>
 </div>
